--- a/agriventure_site/inventory/templates/inventory/index.html
+++ b/agriventure_site/inventory/templates/inventory/index.html
@@ -7,13 +7,17 @@
   <body>
     <p>Warensystem für Landwirte</p>
     <div>
-        <form method="POST" action="/inventory/newentry/">
-            <input type="submit"/>
+        <div>
+        <form method="POST">
+            <input type="submit" id="list_transactions" name="list_transactions" value="Liste Lieferungen"><br><br>
         </form>
+        </div>
 
-        <form method="POST" action="/inventory/list/">
-            <input type="submit"/>
+        <div>
+        <form method="POST">
+            <input type="submit" id="new_transactions" name="new_transactions" value="Neue Lieferung"><br><br>
         </form>
+        </div>
     </div>
   </body>
 </html>
