--- a/agriventure_site/inventory/templates/inventory/newentry.html
+++ b/agriventure_site/inventory/templates/inventory/newentry.html
@@ -1,5 +1,59 @@
 <!DOCTYPE html>
 <html>
+
+<SCRIPT language="javascript">
+		function addRow(tableID) {
+
+			var table = document.getElementById(tableID);
+
+			var rowCount = table.rows.length;
+			var row = table.insertRow(rowCount);
+
+			var cell1 = row.insertCell(0);
+			var element1 = document.createElement("input");
+			element1.type = "checkbox";
+			element1.name="chkbox[]";
+			cell1.appendChild(element1);
+
+
+			var cell3 = row.insertCell(1);
+			var element2 = document.createElement("input");
+			element2.type = "text";
+			element2.name = "fruit[]";
+			cell3.appendChild(element2);
+
+			var cell4 = row.insertCell(2);
+			var element3 = document.createElement("input");
+			element3.type = "text";
+			element3.name = "qtty[]";
+			cell4.appendChild(element3);
+
+
+		}
+
+		function deleteRow(tableID) {
+			try {
+			var table = document.getElementById(tableID);
+			var rowCount = table.rows.length;
+
+			for(var i=0; i<rowCount; i++) {
+				var row = table.rows[i];
+				var chkbox = row.cells[0].childNodes[0];
+				if(null != chkbox && true == chkbox.checked) {
+					table.deleteRow(i);
+					rowCount--;
+					i--;
+				}
+
+
+			}
+			}catch(e) {
+				alert(e);
+			}
+		}
+
+	</SCRIPT>
+
   <head>
     <meta charset="utf-8">
     <title>agriventure</title>
@@ -22,11 +76,22 @@
                 <td>Für</td>
                 <td><label><input type="text" id="delivered_by" name="delivered_by" value="{{ temp_item.deilvered_by }}"></label></td>
             </tr>
-
+            <TABLE id="dataTable" width="350px" border="1">
+                <th>
+                    <td>Frucht</td>
+                    <td>Menge</td>
+                </th>
+                <TR>
+                    <TD><INPUT type="checkbox" name="chk"/></TD>
+                    <TD> <INPUT type="text" name="fruit[]" /> </TD>
+                    <TD> <INPUT type="text" name="qtty[]" /> </TD>
+                </TR>
+            </TABLE>
             <tr>
-                <td>Komponenten</td>
-                <td><label><input type="submit" id=new_component" name="new_component" value="Neue Komponente"></label></td>
+                <td><input type="button" value="Neue Komponente" onclick="addRow('dataTable')" /></td>
+                <td><input type="button" value="Lösche Komponente" onclick="deleteRow('dataTable')" /></td>
             </tr>
+
 
         </table>
             <input type="submit" id="new_transactions" name="new_transactions" value="Anlegen"><br><br>
