--- a/agriventure_site/inventory/templates/inventory/newentry.html
+++ b/agriventure_site/inventory/templates/inventory/newentry.html
@@ -128,6 +128,30 @@
             return document.getElementById(dataTable).rows.length
         }
 
+        function checkAndSubmit() {
+		    var inputs, index;
+            var valid = true;
+            inputs = document.getElementsByTagName('input');
+            for (index = 0; index < inputs.length; ++index) {
+                if (inputs[index].value.trim() == '') {
+
+                    inputs[index].style = "background-color:Tomato;";
+                    valid = false;
+                }else {
+                    inputs[index].style = "";
+                }
+            }
+            if (document.getElementsByName('item_type[]').length == 0) {
+                valid = false;
+                document.getElementById('new_component_btn').style = "background-color:Tomato;";
+            }else {
+                    document.getElementById('new_component_btn').style = "";
+                }
+            if (valid) {
+                document.forms["new_transaction_form"].submit();
+            }
+        }
+
 	</SCRIPT>
 
   <head>
@@ -138,7 +162,7 @@
   <body>
     <p>Neue Lieferung</p>
 
-        <form method="POST">
+        <form name="new_transaction_form" method="POST">
             <select id="transaction_type" name="transaction_type">
             <option value=”plus”>Zugang</option>
             <option value=”minus”>Abgang</option>
@@ -183,13 +207,13 @@
             </TABLE>
 
             <tr>
-                <td><input type="button" value="Neue Komponente" onclick="addRow('dataTable')" /></td>
+                <td><input name="new_component_btn" id="new_component_btn" type="button" value="Neue Komponente" onclick="addRow('dataTable')" /></td>
                 <td><input type="button" value="Lösche Komponente" onclick="deleteRow('dataTable')" /></td>
             </tr>
 
 
         </table>
-            <input type="submit" id="new_transactions" name="new_transactions" value="Anlegen"><br><br>
+            <input type="button" id="new_transactions" name="new_transactions" value="Anlegen" onclick="checkAndSubmit()"><br><br>
         </form>
 
 
