Delivery Note download

--- a/agriventure_site/inventory/templates/inventory/list.html
+++ b/agriventure_site/inventory/templates/inventory/list.html
@@ -19,7 +19,7 @@
     <div class="form-group has-success">
         <label class="sr-only" for="id_date">
             Date</label>
-        <input type="datetime-local" name="date" value="" class="form-control" placeholder="Datum" title="" id="id_date">
+        <input type="date" name="date" value="" class="form-control" placeholder="Datum" title="" id="id_date">
     </div>
 </div>
         <button class="btn btn-default">filtern</button>
