--- a/agriventure_site/inventory/templates/lieferschein_template.html
+++ b/agriventure_site/inventory/templates/lieferschein_template.html
@@ -58,7 +58,7 @@
         </tr>
     </table>
     <br>
-    <span>Abgegeben Gesamt: <span id="total_delivered"></span>></span>
+    <span>Abgegeben Gesamt: <span id="total_delivered"></span></span>
 
     <br>
     <br>
