--- a/agriventure_site/inventory/templates/inventory/transaction_form.html
+++ b/agriventure_site/inventory/templates/inventory/transaction_form.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>agriventure</title>
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" /
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
 </head>
 
 {% block content %}
