--- a/agriventure_site/inventory/templates/inventory/list.html
+++ b/agriventure_site/inventory/templates/inventory/list.html
@@ -4,10 +4,43 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Transaktionen</title>
+        <title>agriventure</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+        <style>
+            ul {
+          list-style-type: none;
+          margin: 0;
+          padding: 0;
+          overflow: hidden;
+          background-color: #333;
+        }
+
+        li {
+          float: left;
+        }
+
+        li a {
+          display: block;
+          color: white;
+          text-align: center;
+          padding: 14px 16px;
+          text-decoration: none;
+        }
+
+        /* Change the link color to #111 (black) on hover */
+        li a:hover {
+          background-color: #111;
+        }
+        </style>
     </head>
     <body>
+       <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="/list/?sort=-pk">Liste Transaktionen</a></li>
+      <li><a href="/newentry/">Neue Transaktion</a></li>
+      <li><a href="/admin/">Administrator</a></li>
+    </ul>
+
         {% if filter %}
     <form action="" method="get" class="form form-inline">
 
