--- a/agriventure_site/inventory/templates/inventory/newentry.html
+++ b/agriventure_site/inventory/templates/inventory/newentry.html
@@ -152,9 +152,41 @@
   <head>
     <meta charset="utf-8">
     <title>agriventure</title>
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" /
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+      <style>
+            ul {
+          list-style-type: none;
+          margin: 0;
+          padding: 0;
+          overflow: hidden;
+          background-color: #333;
+        }
+
+        li {
+          float: left;
+        }
+
+        li a {
+          display: block;
+          color: white;
+          text-align: center;
+          padding: 14px 16px;
+          text-decoration: none;
+        }
+
+        /* Change the link color to #111 (black) on hover */
+        li a:hover {
+          background-color: #111;
+        }
+        </style>
   </head>
   <body>
+   <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="/list/?sort=-pk">Liste Transaktionen</a></li>
+      <li><a href="/newentry/">Neue Transaktion</a></li>
+      <li><a href="/admin/">Administrator</a></li>
+    </ul>
     <p>Neue Lieferung</p>
 
         <form name="new_transaction_form" method="POST">
