--- a/agriventure_site/inventory/templates/inventory/list.html
+++ b/agriventure_site/inventory/templates/inventory/list.html
@@ -38,7 +38,9 @@
       <li><a href="/">Home</a></li>
       <li><a href="/list/?sort=-pk">Liste Transaktionen</a></li>
       <li><a href="/newentry/">Neue Transaktion</a></li>
+           <li><a href="/stock/">Lager</a></li>
       <li><a href="/admin/">Administrator</a></li>
+
     </ul>
 
         {% if filter %}
