--- a/agriventure_site/inventory/templates/inventory/newentry.html
+++ b/agriventure_site/inventory/templates/inventory/newentry.html
@@ -185,6 +185,7 @@
       <li><a href="/">Home</a></li>
       <li><a href="/list/?sort=-pk">Liste Transaktionen</a></li>
       <li><a href="/newentry/">Neue Transaktion</a></li>
+       <li><a href="/stock/">Lager</a></li>
       <li><a href="/admin/">Administrator</a></li>
     </ul>
     <p>Neue Lieferung</p>
