Address in lieferschein template.

--- a/agriventure_site/inventory/templates/lieferschein_template.html
+++ b/agriventure_site/inventory/templates/lieferschein_template.html
@@ -37,8 +37,8 @@
 
     <address style="text-align: right; ">
         Norbert Tendler <br>
-        Teststraße 1<br>
-        123345 Jeseritz<br>
+        Sachauer Weg 3<br>
+        39638 Jeseritz<br>
     </address>
 
     <h4><span id="transaction_type">Eingang vom:</span><span id="transaction_date">01.01.2021</span><br></h4>
